bug 283564: Fix a leak when the HTML fragment sink is used to parse an empty string by ensuring that DidBuildModel() is always called. r+sr=bzbarsky